# twentyseven

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _config.yml  cabal.haskell-ci  examples.txt  index.html  index.md  params.json  print-ts-tables-url.sh  sample.html  stack.yaml  ts-tables.sha256  twentyseven.cabal
.github/workflows/: haskell-ci.yml
_layouts/: default.html
benchmarks/: distances.hs
exec-src/: twentyseven.hs
src/: Coord.hs  Cubie.hs  Distance.hs  Distances.hs  Facelet.hs  IDA.hs  Makefile  Misc.hs  Moves.hs  Queue.hs  Solver.hs  StrictTuple.hs  StrictTuples.hs  Symmetry.hs  Tables.hs  TwoPhase.hs  coord.hs  cubie.hs  facelet.hs  main-benches.hs  main-twophase.hs  misc.hs  moves.hs  optimal.hs  test  tstables.hs  twophase.hs
src/Data/: MBitVector.hs  Queue.hs  StrictTuple.hs
src/Data/Binary/: Storable.hs  Store.hs
src/Data/StrictTuple/: Template.hs
src/Data/Tuple/: Extra.hs  Template.hs
src/Data/Vector/: HalfByte.hs
src/Data/Vector/Generic/Mutable/: Loops.hs
src/Data/Vector/Primitive/: Pinned.hs
src/Data/Vector/Storable/: Allocated.hs
src/Language/Haskell/: THUtils.hs
src/Rubik/: Cube.hs  Distances.hs  IDA.hs  Misc.hs  Solver.hs  Symmetry.hs  Tables.hs
src/Rubik/Cube/: Coord.hs  Cubie.hs  Facelet.hs  Moves.hs
src/Rubik/Cube/Cubie/: Internal.hs
src/Rubik/Cube/Facelet/: Internal.hs
src/Rubik/Cube/Moves/: Internal.hs
src/Rubik/Solver/: Optimal.hs  Template.hs  TwoPhase.hs
src/Rubik/Tables/: Distances.hs  Internal.hs  Moves.hs
src/Solver/: Optimal.hs  TwoPhase.hs
src/StrictTuple/: Template.hs
test/: IDATest.hs  Test.hs
