name:                twentyseven
version:             0.0.0.0
synopsis:            Rubik's cube solver
-- description:         
homepage:            https://github.com/lysxia/twentyseven
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          li-yao.xia@ens.fr
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Binary.Store
    Data.Queue,
    Data.StrictTuple,
    Data.StrictTuple.Template,
    Rubik.Cube
    Rubik.Cube.Facelet,
    Rubik.Cube.Coord,
    Rubik.Cube.Cubie,
    Rubik.Cube.Moves,
    Rubik.Distances,
    Rubik.IDA,
    Rubik.Misc,
    Rubik.Solver,
    -- Rubik.Solver.Optimal,
    Rubik.Solver.TwoPhase,
    Rubik.Solver.Template
    Rubik.Symmetry
  default-extensions:
    PartialTypeSignatures
  other-extensions:
    DeriveFoldable,
    DeriveFunctor,
    FlexibleInstances,
    MultiParamTypeClasses,
    ScopedTypeVariables,
    TemplateHaskell,
    ViewPatterns
  build-depends:
    base >=4.5,
    binary,
    bytestring,
    directory,
    filepath,
    heap >=1.0,
    vector >=0.10,
    vector-binary-instances,
    containers >=0.5,
    mtl >= 2.1,
    random,
    template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

executable twentyseven
  main-is:             twentyseven.hs
  hs-source-dirs:      exec-src
  build-depends:
    base >=4.5,
    criterion,
    optparse-applicative,
    transformers,
    twentyseven
  default-language:    Haskell2010
  ghc-options:         -O2

