name:                twentyseven
version:             0.0.0.0
synopsis:            Rubik's cube solver
-- description:         
homepage:            https://github.com/lysxia/twentyseven
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          li-yao.xia@ens.fr
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Binary.Store
    Data.Queue,
    Data.StrictTuple,
    Data.StrictTuple.Template,
    Rubik.Cube
    Rubik.Cube.Facelet,
    Rubik.Cube.Facelet.Internal,
    Rubik.Cube.Coord,
    Rubik.Cube.Cubie,
    Rubik.Cube.Cubie.Internal,
    Rubik.Cube.Moves,
    Rubik.Cube.Moves.Internal,
    Rubik.Tables.Distances,
    Rubik.Tables.Moves,
    Rubik.Tables.Internal,
    Rubik.Distances,
    Rubik.IDA,
    Rubik.Misc,
    Rubik.Solver,
    -- Rubik.Solver.Optimal,
    Rubik.Solver.TwoPhase,
    Rubik.Solver.Template
    Rubik.Symmetry
  other-modules:
    Language.Haskell.THUtils
  default-extensions:
    PartialTypeSignatures
  other-extensions:
    DeriveFoldable,
    DeriveFunctor,
    FlexibleInstances,
    MultiParamTypeClasses,
    ScopedTypeVariables,
    TemplateHaskell,
    ViewPatterns
  build-depends:
    pqueue,
    base >=4.5,
    binary,
    bytestring,
    directory,
    file-embed,
    filepath,
    heap >=1.0,
    vector >=0.10,
    vector-binary-instances,
    containers >=0.5,
    mtl >= 2.1,
    random,
    template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

executable twentyseven
  main-is:             twentyseven.hs
  hs-source-dirs:      exec-src
  build-depends:
    base >=4.5,
    criterion,
    optparse-applicative,
    transformers,
    twentyseven
  default-language:    Haskell2010
  ghc-options:         -O2

Test-Suite test-twentyseven
  type: detailed-0.9
  hs-source-dirs: test
  test-module: Test
  build-depends:
    base >=4.5,
    Cabal >=1.9.3,
    cabal-test-quickcheck >=0.1.6,
    HUnit-Plus >=1.1.0,
    QuickCheck >=2.8,
    split,
    vector,
    twentyseven
  default-language: Haskell2010
